--- a/EStore/app/src/main/res/layout/fragment_home.xml
+++ b/EStore/app/src/main/res/layout/fragment_home.xml
@@ -19,16 +19,17 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="348dp"
-        android:layout_marginTop="70dp">
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
 
-           >
+            >
 
 
             <LinearLayout
@@ -38,7 +39,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/category_recycler_view">
-                <include layout="@layout/horizontal_scroll_layout"/>
+
+                <include layout="@layout/horizontal_scroll_layout" />
 
 
             </LinearLayout>
@@ -68,11 +70,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <include layout="@layout/grid_product_layout"></include>
             </LinearLayout>
 
 
         </LinearLayout>
     </ScrollView>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/home_fragment_recycle_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/category_recycler_view" />
 
 </android.support.constraint.ConstraintLayout>
