--- a/EStore/app/src/main/res/layout/activity_product_details.xml
+++ b/EStore/app/src/main/res/layout/activity_product_details.xml
@@ -40,11 +40,15 @@
             <include layout="@layout/product_details_image_layout"/>
             <include layout="@layout/rewards_with_products_layout"></include>
             <include layout="@layout/product_deswcription_layout"></include>
-
+            <include layout="@layout/rating_layout"></include>
 
 
 
         </LinearLayout>
     </ScrollView>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+
 
 </android.support.constraint.ConstraintLayout>
