--- a/EStore/app/src/main/res/values/colors.xml
+++ b/EStore/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#290280</color>
     <color name="colorAccent">#ffffff</color>
     <color name="colorFaint">#50ffffff</color>
+    <color name="black">#000000</color>
 </resources>
