--- a/EStore/app/src/main/res/layout/activity_product_details.xml
+++ b/EStore/app/src/main/res/layout/activity_product_details.xml
@@ -28,7 +28,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">
@@ -37,18 +37,71 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <include layout="@layout/product_details_image_layout"/>
-            <include layout="@layout/rewards_with_products_layout"></include>
-            <include layout="@layout/product_deswcription_layout"></include>
-            <include layout="@layout/rating_layout"></include>
 
+            <include layout="@layout/product_details_image_layout" />
+
+            <include layout="@layout/rewards_with_products_layout"></include>
+
+            <include layout="@layout/product_deswcription_layout"></include>
+
+            <include layout="@layout/rating_layout"></include>
 
 
         </LinearLayout>
     </ScrollView>
+
     <LinearLayout
+        android:background="@color/colorAccent"
+        android:elevation="8dp"
+
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout8"
         android:layout_width="0dp"
         android:layout_height="56dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="horizontal"
+           android:layout_weight="1"
+           android:gravity="center"
+           android:id="@+id/add_to_cart_btn"
+
+           >
+
+           <TextView
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:text="ADD TO CART"
+               android:textAlignment="center"
+               android:gravity="center"
+               android:textSize="16sp"
+               android:textColor="@color/black"
+               android:textStyle="bold"
+               android:drawableEnd="@mipmap/shopping_cart"
+               android:drawableTint="@color/black"
+               android:textAllCaps="false"/>
+
+
+
+
+
+       </LinearLayout>
+        <Button
+            android:id="@+id/buy_now_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Buy Now"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:stateListAnimator="@null"/>
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
