--- a/EStore/app/src/main/res/layout/rating_layout.xml
+++ b/EStore/app/src/main/res/layout/rating_layout.xml
@@ -61,7 +61,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/total_ratings"
+        android:id="@+id/total_ratings_tv"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
         app:layout_constraintStart_toStartOf="@+id/linearLayout6"
-        app:layout_constraintTop_toBottomOf="@+id/total_ratings">
+        app:layout_constraintTop_toBottomOf="@+id/total_ratings_tv">
 
         <ProgressBar
             android:id="@+id/progressBar1"
