--- a/EStore/app/src/main/res/layout/fragment_my_account.xml
+++ b/EStore/app/src/main/res/layout/fragment_my_account.xml
@@ -5,10 +5,33 @@
     android:layout_height="match_parent"
     tools:context=".MyAccountFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/profile_data_layout" />
+
+            <include layout="@layout/order_status_layout" />
+            <include layout="@layout/my_addresses_layout"/>
+
+            <Button
+                android:id="@+id/account_signout_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="Sign Out"
+                android:textColor="@color/colorAccent"
+
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
