--- a/EStore/app/src/main/res/layout/rating_layout.xml
+++ b/EStore/app/src/main/res/layout/rating_layout.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/total_ratings_tv">
 
         <ProgressBar
-            android:id="@+id/progressBar1"
+            android:id="@+id/packed_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -96,7 +96,7 @@
             android:progressTint="#34CC3B" />
 
         <ProgressBar
-            android:id="@+id/progressBar2"
+            android:id="@+id/shipped_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -118,7 +118,7 @@
             android:progressTint="#FAC43C" />
 
         <ProgressBar
-            android:id="@+id/progressBar3"
+            android:id="@+id/delivered_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
