--- a/ECart/app/src/main/res/layout/fragment_cart.xml
+++ b/ECart/app/src/main/res/layout/fragment_cart.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/total_cart_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rs.56,098/-"
+                android:text="Rs. /-"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -69,6 +69,7 @@
             android:layout_weight="1"
             android:background="@color/colorPrimary"
             android:text="Continue"
+
             android:textAllCaps="false"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
